// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Note Component renders empty with no tabs 1`] = `
<div
  className="Note"
>
  <NoteError>
    <h2
      className="Note__title"
    >
      <Link
        replace={false}
        to="/note/undefined"
      />
    </h2>
    <button
      className="Note__delete"
      onClick={[Function]}
      type="button"
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon="trash-alt"
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
       
      remove
    </button>
    <div
      className="Note__dates"
    >
      <div
        className="Note__dates-modified"
      >
        Modified
         
        <span
          className="Date"
        >
          Invalid Date
        </span>
      </div>
      <div>
        <Link
          replace={false}
          to="/edit/undefined"
        >
          Edit note
        </Link>
      </div>
    </div>
  </NoteError>
</div>
`;

exports[`Note Component renders its given props 1`] = `
<div
  className="Note"
>
  <NoteError>
    <h2
      className="Note__title"
    >
      <Link
        replace={false}
        to="/note/342"
      >
        test
      </Link>
    </h2>
    <button
      className="Note__delete"
      onClick={[Function]}
      type="button"
    >
      <FontAwesomeIcon
        border={false}
        className=""
        fixedWidth={false}
        flip={null}
        icon="trash-alt"
        inverse={false}
        listItem={false}
        mask={null}
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        title=""
        transform={null}
      />
       
      remove
    </button>
    <div
      className="Note__dates"
    >
      <div
        className="Note__dates-modified"
      >
        Modified
         
        <span
          className="Date"
        >
          15th Jan 2019
        </span>
      </div>
      <div>
        <Link
          replace={false}
          to="/edit/342"
        >
          Edit note
        </Link>
      </div>
    </div>
  </NoteError>
</div>
`;
